<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding">

        <TextView
                android:id="@+id/name_text"
                style="@style/MyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alexander"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"/>

        <EditText
                android:id="@+id/nickname_edit"
                style="@style/MyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:textAlignment="center"/>

        <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"/>

        <TextView
                android:id="@+id/nickname_text"
                style="@style/MyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"/>

        <ImageView
                android:id="@+id/star_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:contentDescription="@string/yellow_star"
                android:padding="@dimen/small_padding"
                app:srcCompat="@android:drawable/btn_star_big_on"/>

        <ScrollView
                android:id="@+id/bio_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/bio_text"
                    style="@style/MyStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/bio"/>
        </ScrollView>
    </LinearLayout>
</layout>